<resources>
    <string name="app_name">Franger</string>
    <string name="register">Register</string>
    <string name="login_hint">Login Using</string>
    <string name="phone_number_error_msg">Please enter a valid phone number</string>
    <string name="sorry_error_occurred">Some problem in server</string>
    <string name="title_activity_otp">VerifyUserActivity</string>
    <string name="country_name_hint">Enter Country name/code to search</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="sms_sent_msg">OTP sent</string>
    <string name="otp_hint">Enter OTP here</string>
    <string name="title_activity_invite">InviteActivity</string>

    <string name="country_list_string_format">%s (%s)</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="name_hint">Enter your name</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="user_name_blank_error">Name can\'t be blank</string>
    <string name="invite">Invite</string>
    <string name="next">Next</string>
    <string name="common_error_msg">Some Problem in Server</string>
    <string name="search">Search</string>

    <!-- Tab names -->
    <string name="incoming">My Chats</string>
    <string name="outgoing">As Anonymous</string>

    <!-- Date time strings -->
    <string name="time_ago_just_now">" just now"</string>
    <string name="time_ago_minute_ago">a minute ago</string>
    <string name="time_ago_minutes_ago">" minutes ago"</string>
    <string name="time_ago_hour_ago">an hour ago</string>
    <string name="time_ago_hours_ago">" hours ago"</string>
    <string name="time_ago_yesterday">yesterday</string>
    <string name="time_ago_days_ago">" days ago"</string>

    <string name="block">Block</string>
    <string name="unblock">UnBlock</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
