<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.frangerapp.franger.viewmodel.login.LoginViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_hint" />


            <EditText
                android:id="@+id/countryCodeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:onClick="@{vm::onCountryCodeClick}"
                android:text="@={vm.countryCodeWithCountryNameTxt}"
                android:textAlignment="center"
                tools:text="India (+91)" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="center"
                    android:text="@{vm.countryCodeTxt}"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.phoneNumberTxt}"
                    android:inputType="number"
                    tools:text="9790708464" />
            </LinearLayout>

            <TextView
                android:id="@+id/errorTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/phone_number_error_msg"
                android:textColor="@color/red"
                android:visibility="@{vm.phoneNumberTxtVisibility}" />


            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/circular_border_shape"
                android:onClick="@{vm::onVerifyClicked}"
                android:text="@string/register"
                android:textColor="@color/white"
                app:initialCornerAngle="2dp"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

        </LinearLayout>

        <!--<include layout="@layout/fragment_countries_list_dialog" />-->

    </android.support.constraint.ConstraintLayout>

</layout>